--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-harmony",
-  "version": "1.2.6",
+  "name": "node-red-contrib-harmony-extra",
+  "version": "1.0.1",
   "description": "Harmony integration for Node-RED",
   "license": "MIT",
   "dependencies": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Aietes/node-red-contrib-harmony.git"
+    "url": "https://github.com/Aietes/node-red-contrib-harmony-extra.git"
   },
   "keywords": [
     "node-red",
@@ -24,7 +24,7 @@
     }
   },
   "author": {
-    "name": "Stefan Krüger"
+    "name": "Martin Walker"
   },
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint"
